; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_check_body_is_final.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_check_body_is_final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@messages = common dso_local global %struct.TYPE_2__* null, align 8
@num_messages = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [102 x i8] c"\0A\0A *** Error http_body_is_final() should return 1 on last on_body callback call but it doesn't! ***\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_body_is_final(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %4 = load i64, i64* @num_messages, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i64 %4
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i32, i32* @stderr, align 4
  %11 = call i32 @fprintf(i32 %10, i8* getelementptr inbounds ([102 x i8], [102 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @assert(i32 0)
  %13 = call i32 (...) @abort() #3
  unreachable

14:                                               ; preds = %1
  %15 = load i32*, i32** %2, align 8
  %16 = call i64 @http_body_is_final(i32* %15)
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %18 = load i64, i64* @num_messages, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  store i64 %16, i64* %20, align 8
  ret void
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @assert(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i64 @http_body_is_final(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
